Add scheduled tasks

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 BOT_TOKEN=DISCORD_BOT_TOKEN_HERE
 OWNER_ID=YOUR_ACTUAL_DISCORD_USER_ID_NOT_BOTS
+HEARTBEAT_CHANNEL_ID=INTERVAL_MESSAGES_CHANNEL_ID
+TIMEZONE=Etc/UTC
